--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "start": "next start"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.80.0",
-    "dotenv": "^17.2.3",
-    "next": "16.0.1",
-    "node-fetch": "^3.3.2",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "spotify-web-api-node": "^5.0.2"
+    "@tailwindcss/postcss": "^4.1.17",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.553.0",
+    "next": "^14.2.33",
+    "postcss": "^8.5.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@ljharb/tsconfig": "^0.3.2",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -27,7 +27,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "https-localhost": "^4.7.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
