--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.81.1",
     "@tailwindcss/postcss": "^4.1.17",
+    "cheerio": "^1.1.2",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.553.0",
     "next": "^14.2.33",
+    "playwright": "^1.56.1",
     "postcss": "^8.5.6",
     "react": "18.3.1",
     "react-dom": "18.3.1"
