--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.553.0",
     "next": "^14.2.33",
+    "openai": "^6.9.0",
     "playwright": "^1.56.1",
     "postcss": "^8.5.6",
     "react": "18.3.1",
