--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ffmpeg/util": "^0.12.2",
     "@supabase/supabase-js": "^2.81.1",
     "@tailwindcss/postcss": "^4.1.17",
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
